# cmake-universal-template

./: .gitignore  .gitmodules  README.md
.devcontainer/: README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  semver.cpp
src/luir/: CMakeLists.txt
test/: CMakeLists.txt
